welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:20: error: not found: value message
    message=litMessage().toInt
    ^Array2:21: error: not found: value message
    println(message)
            ^Array2:22: error: not found: value message
    var decalage = message.toInt
                   ^